Correction de problèmes d'imports de controllers.

--- a/src/back/.gitignore
+++ b/src/back/.gitignore
@@ -1,7 +1,9 @@
 node_modules
-.env
-.env.docker
-.env.sequelize
-.env.tests
 uploads
 .idea
+
+# A décommenter lors de la mise en place du dépot Git
+# .env
+# .env.docker
+# .env.sequelize
+# .env.tests
