Possibilité de choisir les entités entre lesquelles faire les associations.

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 	"license": "ISC",
 	"devDependencies": {
 		"plop": "^3.1.2"
+	},
+	"dependencies": {
+		"inquirer-autocomplete-prompt": "^3.0.0"
 	}
 }
