--- a/src/back/docker-compose.yml
+++ b/src/back/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   postgres-svc:
     image: postgres
-    env_file: .env.docker
+    env_file: .env
     ports:
       - "5432:5432"
     volumes:
